@@ -14,7 +14,7 @@ package org.openhab.binding.lcn.internal.subhandler;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.IntStream;
@@ -90,6 +90,6 @@ public class LcnModuleKeyLockTableSubHandler extends AbstractLcnModuleSubHandler
 
     @Override
     public Collection<Pattern> getPckStatusMessagePatterns() {
-        return Collections.singleton(PATTERN);
+        return Set.of(PATTERN);
     }
 }
